# AmazonAffiliatedBot

./: LICENSE  README.md  config.py  content_generator.py  database.py  database_simple.py  link_validator.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  scraper.py  telegram_bot.py  web_dashboard_clean.py
.config/.semgrep/: settings.yml
static/css/: dashboard.css
static/js/: dashboard.js  dashboard_old.js
templates/: base.html  dashboard.html  deals.html  users.html
