 [project]
name = "Amazonbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "RafalW3bCraft" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "markupsafe>=3.0.2",
    "openai>=1.88.0",
    "psycopg2-binary>=2.9.10",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
